# raster-fun

raster/: pyproject.toml
raster/raster/: find_snow.ipynb  rampart-ponds-sentinel.ipynb  tutorial-stac-spec.ipynb
